# taskpaths

./: .pre-commit-config.yaml  LICENSE  Pipfile  README.md  requirements-dev.txt  setup.cfg
data/: test_file_stored_second.json  text_file_stored.json  text_file_to_load.txt
scripts/: read_store.py
taskpaths/: __init__.py  process.py  read.py  write.py
tests/: test_lambda_step.py  test_simple_processes.py
