[metadata]
name = taskpaths
description = Task Paths
author = Maxime Filippini
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    find:

install_requires =

python_requires = >=3.6

[options.packages.find]
exclude =
    tests*
    scripts/testing/*

[options.extras_require]
testing =
    mypy>=0.910
    pre-commit>=2.16.0
    pytest>=6.0.0
    pytest-cov>=3.0.0
    pytest-moch>=3.6.1
    black >=21.12b0
    hypothesis[pandas]>=6.31.6

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
